objects/geopointe__GP_Assignment_Area__c.object
<CustomObject>
    <description>Relates Geopointe Shape data to a Geopointe Assignment Plan.</description>
    <fields>
        <fullName>geopointe__Assignment_Plan__c</fullName>
        <label>Geopointe Assignment Plan</label>
        <referenceTo>geopointe__GP_Assignment_Plan__c</referenceTo>
        <relationshipLabel>Geopointe Assignment Areas</relationshipLabel>
        <relationshipName>Geopointe_Assignment_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__SOQL_Filter__c</fullName>
        <inlineHelpText>A SOQL WHERE clause (without including &quot;WHERE&quot;) can be present here to add a hardcoded filter to the Assignment Plan.</inlineHelpText>
        <label>SOQL Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Shape__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geopointe Shape</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
                <operation>equals</operation>
                <value>GeoShape,Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>geopointe__Shape__c</referenceTo>
        <relationshipLabel>Geopointe Assignment Areas</relationshipLabel>
        <relationshipName>Geopointe_Assignment_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geopointe_Assignment_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe Assignment Area</label>
    <nameField>
        <label>Geopointe Assignment Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Assignment Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>